Work on marco and soldier movement

--- a/game.vcxproj
+++ b/game.vcxproj
@@ -254,11 +254,13 @@
     <ClCompile Include="Source\Source\Character\Source\ally.cpp" />
     <ClCompile Include="Source\Source\Character\Source\bullet.cpp" />
     <ClCompile Include="Source\Source\Character\Source\character.cpp" />
+    <ClCompile Include="Source\Source\Character\Source\enemy.cpp" />
     <ClCompile Include="Source\Source\Character\Source\hero.cpp" />
     <ClCompile Include="Source\Source\Character\Source\hostage.cpp" />
     <ClCompile Include="Source\Source\Character\Source\item.cpp" />
-    <ClCompile Include="Source\Source\Character\Source\object.cpp" />
-    <ClCompile Include="Source\Source\Character\Source\obsticle.cpp" />
+    <ClCompile Include="Source\Source\Character\Source\marco.cpp" />
+    <ClCompile Include="Source\Source\Character\Source\game_object.cpp" />
+    <ClCompile Include="Source\Source\Character\Source\soldier.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h" />
@@ -275,11 +277,13 @@
     <ClInclude Include="Source\Source\Character\Header\ally.h" />
     <ClInclude Include="Source\Source\Character\Header\bullet.h" />
     <ClInclude Include="Source\Source\Character\Header\character.h" />
+    <ClInclude Include="Source\Source\Character\Header\enemy.h" />
     <ClInclude Include="Source\Source\Character\Header\hero.h" />
     <ClInclude Include="Source\Source\Character\Header\hostage.h" />
     <ClInclude Include="Source\Source\Character\Header\item.h" />
-    <ClInclude Include="Source\Source\Character\Header\object.h" />
-    <ClInclude Include="Source\Source\Character\Header\obsticle.h" />
+    <ClInclude Include="Source\Source\Character\Header\marco.h" />
+    <ClInclude Include="Source\Source\Character\Header\game_object.h" />
+    <ClInclude Include="Source\Source\Character\Header\soldier.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\Core\game.rc" />
