--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -75,16 +75,22 @@
     <ClCompile Include="Source\Source\Character\Source\hostage.cpp">
       <Filter>Source\Source</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Source\Character\Source\object.cpp">
-      <Filter>Source\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Source\Character\Source\obsticle.cpp">
-      <Filter>Source\Source</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Source\Character\Source\bullet.cpp">
       <Filter>Source\Source</Filter>
     </ClCompile>
     <ClCompile Include="Source\Source\Character\Source\item.cpp">
+      <Filter>Source\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Source\Character\Source\enemy.cpp">
+      <Filter>Source\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Source\Character\Source\marco.cpp">
+      <Filter>Source\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Source\Character\Source\soldier.cpp">
+      <Filter>Source\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Source\Character\Source\game_object.cpp">
       <Filter>Source\Source</Filter>
     </ClCompile>
   </ItemGroup>
@@ -134,16 +140,22 @@
     <ClInclude Include="Source\Source\Character\Header\hostage.h">
       <Filter>Source\Header</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Source\Character\Header\object.h">
-      <Filter>Source\Header</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Source\Character\Header\obsticle.h">
-      <Filter>Source\Header</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Source\Character\Header\item.h">
       <Filter>Source\Header</Filter>
     </ClInclude>
     <ClInclude Include="Source\Source\Character\Header\bullet.h">
+      <Filter>Source\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Source\Character\Header\enemy.h">
+      <Filter>Source\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Source\Character\Header\marco.h">
+      <Filter>Source\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Source\Character\Header\soldier.h">
+      <Filter>Source\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Source\Character\Header\game_object.h">
       <Filter>Source\Header</Filter>
     </ClInclude>
   </ItemGroup>
