--- a/game.vcxproj
+++ b/game.vcxproj
@@ -251,6 +251,12 @@
     <ClCompile Include="Source\Library\gameutil.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
+    <ClCompile Include="Source\Source\cpp\Bullet.cpp" />
+    <ClCompile Include="Source\Source\cpp\Character.cpp" />
+    <ClCompile Include="Source\Source\cpp\GameStorage.cpp" />
+    <ClCompile Include="Source\Source\cpp\Ground.cpp" />
+    <ClCompile Include="Source\Source\cpp\Marco.cpp" />
+    <ClCompile Include="Source\Source\cpp\Soldier.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h" />
@@ -264,6 +270,12 @@
     <ClInclude Include="Source\Library\audio.h" />
     <ClInclude Include="Source\Library\gamecore.h" />
     <ClInclude Include="Source\Library\gameutil.h" />
+    <ClInclude Include="Source\Source\header\Bullet.h" />
+    <ClInclude Include="Source\Source\header\Character.h" />
+    <ClInclude Include="Source\Source\header\GameStorage.h" />
+    <ClInclude Include="Source\Source\header\Ground.h" />
+    <ClInclude Include="Source\Source\header\Marco.h" />
+    <ClInclude Include="Source\Source\header\Soldier.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\Core\game.rc" />
