--- a/game.vcxproj
+++ b/game.vcxproj
@@ -255,6 +255,7 @@
     <ClCompile Include="Source\Source\cpp\Character.cpp" />
     <ClCompile Include="Source\Source\cpp\GameStorage.cpp" />
     <ClCompile Include="Source\Source\cpp\Ground.cpp" />
+    <ClCompile Include="Source\Source\cpp\MapObject.cpp" />
     <ClCompile Include="Source\Source\cpp\Marco.cpp" />
     <ClCompile Include="Source\Source\cpp\Soldier.cpp" />
   </ItemGroup>
@@ -274,6 +275,7 @@
     <ClInclude Include="Source\Source\header\Character.h" />
     <ClInclude Include="Source\Source\header\GameStorage.h" />
     <ClInclude Include="Source\Source\header\Ground.h" />
+    <ClInclude Include="Source\Source\header\MapObject.h" />
     <ClInclude Include="Source\Source\header\Marco.h" />
     <ClInclude Include="Source\Source\header\Soldier.h" />
   </ItemGroup>
