--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -84,6 +84,12 @@
     <ClCompile Include="Source\Source\cpp\MapObject.cpp">
       <Filter>Source\cpp</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Source\cpp\Firework.cpp">
+      <Filter>Source\cpp</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Source\cpp\Grenade.cpp">
+      <Filter>Source\cpp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Library\audio.h">
@@ -138,6 +144,12 @@
       <Filter>Source\header</Filter>
     </ClInclude>
     <ClInclude Include="Source\Source\header\MapObject.h">
+      <Filter>Source\header</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Source\header\Firework.h">
+      <Filter>Source\header</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Source\header\Grenade.h">
       <Filter>Source\header</Filter>
     </ClInclude>
   </ItemGroup>
