--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="Source\Source\cpp\boss1.cpp">
       <Filter>Source\cpp</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Source\cpp\boss1_canno.cpp">
+      <Filter>Source\cpp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Library\audio.h">
@@ -156,6 +159,9 @@
       <Filter>Source\header</Filter>
     </ClInclude>
     <ClInclude Include="Source\Source\header\Boss1.h">
+      <Filter>Source\header</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Source\header\boss1_canno.h">
       <Filter>Source\header</Filter>
     </ClInclude>
   </ItemGroup>
