--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -25,6 +25,7 @@
     <ClCompile Include="Source\Source\cpp\Prisoner.cpp" />
     <ClCompile Include="Source\Source\cpp\Soldier.cpp" />
     <ClCompile Include="Source\Source\cpp\Boss1_laser.cpp" />
+    <ClCompile Include="Source\Source\cpp\boss1_fire.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h" />
@@ -51,6 +52,7 @@
     <ClInclude Include="Source\Source\header\Prisoner.h" />
     <ClInclude Include="Source\Source\header\Soldier.h" />
     <ClInclude Include="Source\Source\header\Boss1_laser.h" />
+    <ClInclude Include="Source\Source\header\boss1_fire.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\Core\game.rc" />
