--- a/game.vcxproj
+++ b/game.vcxproj
@@ -263,6 +263,7 @@
     <ClCompile Include="Source\Source\cpp\Marco.cpp" />
     <ClCompile Include="Source\Source\cpp\Prisoner.cpp" />
     <ClCompile Include="Source\Source\cpp\RShobu.cpp" />
+    <ClCompile Include="Source\Source\cpp\RShobuBomb.cpp" />
     <ClCompile Include="Source\Source\cpp\Soldier.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -289,6 +290,7 @@
     <ClInclude Include="Source\Source\header\Marco.h" />
     <ClInclude Include="Source\Source\header\Prisoner.h" />
     <ClInclude Include="Source\Source\header\RShobu.h" />
+    <ClInclude Include="Source\Source\header\RShobuBomb.h" />
     <ClInclude Include="Source\Source\header\Soldier.h" />
   </ItemGroup>
   <ItemGroup>
