--- a/game.vcxproj
+++ b/game.vcxproj
@@ -267,6 +267,8 @@
     <ClCompile Include="Source\Source\cpp\RShobu.cpp" />
     <ClCompile Include="Source\Source\cpp\RShobuBomb.cpp" />
     <ClCompile Include="Source\Source\cpp\Soldier.cpp" />
+    <ClCompile Include="Source\Source\cpp\tank.cpp" />
+    <ClCompile Include="Source\Source\cpp\tank_ barrel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h" />
@@ -296,6 +298,8 @@
     <ClInclude Include="Source\Source\header\RShobu.h" />
     <ClInclude Include="Source\Source\header\RShobuBomb.h" />
     <ClInclude Include="Source\Source\header\Soldier.h" />
+    <ClInclude Include="Source\Source\header\tank.h" />
+    <ClInclude Include="Source\Source\header\tank_ barrel.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\Core\game.rc" />
