--- a/game.vcxproj
+++ b/game.vcxproj
@@ -269,6 +269,7 @@
     <ClCompile Include="Source\Source\cpp\Soldier.cpp" />
     <ClCompile Include="Source\Source\cpp\tank.cpp" />
     <ClCompile Include="Source\Source\cpp\tank_ barrel.cpp" />
+    <ClCompile Include="Source\Source\cpp\tank_bullet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h" />
@@ -300,6 +301,7 @@
     <ClInclude Include="Source\Source\header\Soldier.h" />
     <ClInclude Include="Source\Source\header\tank.h" />
     <ClInclude Include="Source\Source\header\tank_ barrel.h" />
+    <ClInclude Include="Source\Source\header\tank_bullet.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\Core\game.rc" />
