--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -30,6 +30,7 @@
     <ClCompile Include="Source\Source\cpp\RShobuBomb.cpp" />
     <ClCompile Include="Source\Source\cpp\tank.cpp" />
     <ClCompile Include="Source\Source\cpp\tank_ barrel.cpp" />
+    <ClCompile Include="Source\Source\cpp\tank_bullet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h" />
@@ -61,6 +62,7 @@
     <ClInclude Include="Source\Source\header\RShobuBomb.h" />
     <ClInclude Include="Source\Source\header\tank.h" />
     <ClInclude Include="Source\Source\header\tank_ barrel.h" />
+    <ClInclude Include="Source\Source\header\tank_bullet.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\Core\game.rc" />
