--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -32,6 +32,7 @@
     <ClCompile Include="Source\Source\cpp\tank_ barrel.cpp" />
     <ClCompile Include="Source\Source\cpp\tank_bullet.cpp" />
     <ClCompile Include="Source\Source\cpp\CsvReader.cpp" />
+    <ClCompile Include="Source\Source\cpp\DamageEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h" />
@@ -65,6 +66,7 @@
     <ClInclude Include="Source\Source\header\tank_ barrel.h" />
     <ClInclude Include="Source\Source\header\tank_bullet.h" />
     <ClInclude Include="Source\Source\header\CsvReader.h" />
+    <ClInclude Include="Source\Source\header\DamageEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\Core\game.rc" />
