--- a/game.vcxproj
+++ b/game.vcxproj
@@ -265,6 +265,7 @@
     <ClCompile Include="Source\Source\cpp\Ground.cpp" />
     <ClCompile Include="Source\Source\cpp\MapObject.cpp" />
     <ClCompile Include="Source\Source\cpp\Marco.cpp" />
+    <ClCompile Include="Source\Source\cpp\Pickup.cpp" />
     <ClCompile Include="Source\Source\cpp\Prisoner.cpp" />
     <ClCompile Include="Source\Source\cpp\RShobu.cpp" />
     <ClCompile Include="Source\Source\cpp\RShobuBomb.cpp" />
@@ -299,6 +300,7 @@
     <ClInclude Include="Source\Source\header\Ground.h" />
     <ClInclude Include="Source\Source\header\MapObject.h" />
     <ClInclude Include="Source\Source\header\Marco.h" />
+    <ClInclude Include="Source\Source\header\Pickup.h" />
     <ClInclude Include="Source\Source\header\Prisoner.h" />
     <ClInclude Include="Source\Source\header\RShobu.h" />
     <ClInclude Include="Source\Source\header\RShobuBomb.h" />
