--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -33,6 +33,7 @@
     <ClCompile Include="Source\Source\cpp\tank_bullet.cpp" />
     <ClCompile Include="Source\Source\cpp\CsvReader.cpp" />
     <ClCompile Include="Source\Source\cpp\DamageEffect.cpp" />
+    <ClCompile Include="Source\Source\cpp\Pickup.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h" />
@@ -67,6 +68,7 @@
     <ClInclude Include="Source\Source\header\tank_bullet.h" />
     <ClInclude Include="Source\Source\header\CsvReader.h" />
     <ClInclude Include="Source\Source\header\DamageEffect.h" />
+    <ClInclude Include="Source\Source\header\Pickup.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\Core\game.rc" />
