加入敵方坦克文檔

--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -42,6 +42,7 @@
     <ClCompile Include="Source\Source\cpp\MenuState.cpp" />
     <ClCompile Include="Source\Source\cpp\tank_cannon_shell.cpp" />
     <ClCompile Include="Source\Source\cpp\RectBox.cpp" />
+    <ClCompile Include="Source\Source\cpp\Enemy_tank.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\Game.h" />
@@ -85,6 +86,7 @@
     <ClInclude Include="Source\Source\header\FinishState.h" />
     <ClInclude Include="Source\Source\header\tank_cannon_shell.h" />
     <ClInclude Include="Source\Source\header\RectBox.h" />
+    <ClInclude Include="Source\Source\header\Enemy_tank.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\Core\game.rc" />
