--- a/game.vcxproj
+++ b/game.vcxproj
@@ -259,6 +259,7 @@
     <ClCompile Include="Source\Source\cpp\Character.cpp" />
     <ClCompile Include="Source\Source\cpp\CsvReader.cpp" />
     <ClCompile Include="Source\Source\cpp\DamageEffect.cpp" />
+    <ClCompile Include="Source\Source\cpp\Enemy_tank.cpp" />
     <ClCompile Include="Source\Source\cpp\FinishState.cpp" />
     <ClCompile Include="Source\Source\cpp\Firework.cpp" />
     <ClCompile Include="Source\Source\cpp\GameStorage.cpp" />
@@ -302,6 +303,7 @@
     <ClInclude Include="Source\Source\header\Character.h" />
     <ClInclude Include="Source\Source\header\CsvReader.h" />
     <ClInclude Include="Source\Source\header\DamageEffect.h" />
+    <ClInclude Include="Source\Source\header\Enemy_tank.h" />
     <ClInclude Include="Source\Source\header\FinishState.h" />
     <ClInclude Include="Source\Source\header\Firework.h" />
     <ClInclude Include="Source\Source\header\GameStorage.h" />
