--- a/game.vcxproj
+++ b/game.vcxproj
@@ -260,6 +260,7 @@
     <ClCompile Include="Source\Source\cpp\CsvReader.cpp" />
     <ClCompile Include="Source\Source\cpp\DamageEffect.cpp" />
     <ClCompile Include="Source\Source\cpp\Enemy_tank.cpp" />
+    <ClCompile Include="Source\Source\cpp\enemy_tank_bullet.cpp" />
     <ClCompile Include="Source\Source\cpp\FinishState.cpp" />
     <ClCompile Include="Source\Source\cpp\Firework.cpp" />
     <ClCompile Include="Source\Source\cpp\GameStorage.cpp" />
@@ -304,6 +305,7 @@
     <ClInclude Include="Source\Source\header\CsvReader.h" />
     <ClInclude Include="Source\Source\header\DamageEffect.h" />
     <ClInclude Include="Source\Source\header\Enemy_tank.h" />
+    <ClInclude Include="Source\Source\header\enemy_tank_bullet.h" />
     <ClInclude Include="Source\Source\header\FinishState.h" />
     <ClInclude Include="Source\Source\header\Firework.h" />
     <ClInclude Include="Source\Source\header\GameStorage.h" />
